--- a/style.css
+++ b/style.css
@@ -1,3 +1,48 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+}
+
+.header {
+    position: fixed;
+    max-width: 100%;
+    width: 100%;
+    height: 82px;
+    background: salmon;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: .25rem;
+}
+
+.today {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5rem 0rem .5rem 0rem;
+    font-size: 92.5%;
+    color: #ffffff;
+    background: rgba(0, 0, 0, 0.75);
+}
+
+.today::after {
+    content: "Time";
+    position: absolute;
+    top: 6px;
+    transform: rotate(12deg);
+}
+
+.timer {
+    background: rgba(0, 0, 0, 0.25);
+}
+
 .container {
     margin: 0;
     padding: 0;
@@ -5,23 +50,23 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 400px;
-    height: 400px;
+    width: 380px;
+    height: 380px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
-    gap: 2.5rem;
-    border-radius: 12rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.35);
+    gap: 2.25rem;
+    border-radius: 6rem;
 }
 
 .container::after {
     position: absolute;
     content: "";
-    top: 0;
-    width: 50%;
-    height: 25px;
+    top: -20px;
+    width: 70%;
+    height: 35px;
     background: #000;
     border-top-left-radius: 50%;
     border-top-right-radius: 50%;
